--- a/AGataDoDia/Pimp/pimp/app/views/login.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/login.scala.html
@@ -40,7 +40,7 @@
 					    </div>
 				  	
 				  		<div class="form-group" >		 		
-					        <label for="password" class="col-lg-2 control-label">Contraseña</label>
+					        <label for="password" class="col-lg-2 control-label">Password</label>
 					       	<div id="password_field" class="col-lg-8">
 					            <input id="password" name="password" type="password" class="form-control" placeholder="Contraseña">
 					           	<span class="help-inline"></span>
@@ -53,11 +53,19 @@
             				<div class="col-lg-10 col-lg-offset-2">
                 				<button type="submit" class="btn btn-primary" value="@Messages("playauthenticate.login.now")">@Messages("playauthenticate.login.now")</button>
             				</div>
-        				</div-->
+        				</div>
+
+
 				  	
 				  	</fieldset>
 				
 				}
+
+                <div class="form-group">
+                    <div class="col-lg-10">
+                        <a href="@controllers.routes.Application.signup" class="btn btn-primary">@Messages("playauthenticate.signup.title")</a>
+                    </div>
+                </div>
 				
 				
 			</div>	
