--- a/AGataDoDia/Pimp/pimp/app/views/signup.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/signup.scala.html
@@ -25,7 +25,8 @@
             
              @inputText(
                 signupForm("name"),
-                '_label -> Messages("playauthenticate.signup.name")
+                '_label -> Messages("playauthenticate.signup.name"),
+                'class -> "form-control"
              )
              
              @_emailPartial(signupForm)
