--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
@@ -20,8 +20,8 @@ row:not(input):not(textarea) {
 		background: #ffffff;
 	}
 
-	#wrapper .container-fluid .row i , 
-	#wrapper2 .container-fluid .row i {
+	#wrapper .container .row i , 
+	#wrapper2 .container .row i {
 		font-size: 2em;
 	}
 
@@ -168,7 +168,8 @@ row:not(input):not(textarea) {
 	
 	.carousel-control {
 		z-index: 2 !important;
-		background-color: red;		
+		height: 0 !important;
+		top:50% !important;
 	}
 
 	.carousel-control.left,
@@ -180,4 +181,27 @@ row:not(input):not(textarea) {
 	span.glyphicon.glyphicon-chevron-left, 
 	span.glyphicon.glyphicon-chevron-right {
 		font-size:1.6em !important;		
+		top: 0 !important;
+	}
+	
+
+	body.content-posts .icon-material-favorite,
+	body.content-posts .icon-material-share-alt {
+		text-shadow: 0 1px 2px rgba(0,0,0,.6);
+		color:#FFFFFF;
+	}
+
+	body.content-posts .icon-material-favorite.on {
+		color:#FF0000;
+	}
+
+
+	body #wrapper2 .icon-material-favorite,
+	body #wrapper2 .icon-material-share-alt {
+		text-shadow: 0 1px 2px rgba(0,0,0,.6);
+		color:#FFFFFF;
+	}
+
+	body #wrapper2 .icon-material-favorite.on {
+		color:#FF0000;
 	}
