--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -226,57 +226,57 @@
                     <div class="navbar-collapse collapse navbar-responsive-collapse">
                         <ul class="nav navbar-nav">
                             <a class="navbar-brand" href="@controllers.routes.Application.index()">@Messages("main.start")</a>
+                            @subjectPresentOr() {
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.women")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.WomenView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.WomenView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
 
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.women")<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.WomenView.list()">@Messages("main.list")</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">@Messages("main.operations")</li>
-                                    <li><a href="@controllers.routes.WomenView.blank">@Messages("main.create")</a></li>
-                                </ul>
-                            </li>
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.posts")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.PostsView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.PostsView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
 
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.posts")<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.PostsView.list()">@Messages("main.list")</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">@Messages("main.operations")</li>
-                                    <li><a href="@controllers.routes.PostsView.blank">@Messages("main.create")</a></li>
-                                </ul>
-                            </li>
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.languages")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
 
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.languages")<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">@Messages("main.operations")</li>
-                                    <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
-                                </ul>
-                            </li>
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.countries")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
 
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.countries")<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">@Messages("main.operations")</li>
-                                    <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.categories")<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.CategoriesView.list()">@Messages("main.list")</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">@Messages("main.operations")</li>
-                                    <li><a href="@controllers.routes.CategoriesView.blank">@Messages("main.create")</a></li>
-                                </ul>
-                            </li>
-
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.categories")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.CategoriesView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.CategoriesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
+                            }{<p/>}
                         </ul>
                     </div>
                 </div>
