--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -276,6 +276,16 @@
                                         <li><a href="@controllers.routes.CategoriesView.blank">@Messages("main.create")</a></li>
                                     </ul>
                                 </li>
+
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.configurations")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@controllers.routes.ConfigsView.list()">@Messages("main.list")</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">@Messages("main.operations")</li>
+                                        <li><a href="@controllers.routes.ConfigsView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
                             }{<p/>}
                         </ul>
                     </div>
