--- a/AGataDoDia/Pimp/pimp/app/views/configs/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/configs/list.scala.html
@@ -87,18 +87,26 @@
         <div class="col-lg-12">
             <div class="bs-component">
                 <div class="list-group">
-                    @for((config, index) <-  currentPage.getList().zipWithIndex) {
-                        <div class="list-group-item">
-                            <a href="@controllers.routes.ConfigsView.edit(config.getIdConfig())">
-                                <div class="row-content">
-                                    <h4 class="list-group-item-heading">@Html(""+config.getIdConfig()) - @Html(config.getConfigKey())</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="list-group-separator">
-                            <!--separator-->
-                        </div>
-                    }
+                    <table class="table table-striped table-hover ">
+                        <thead>
+                            <tr>
+                                <th>@Messages("configs.key")</th>
+                                <th>@Messages("configs.value")</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        @for((config, index) <-  currentPage.getList().zipWithIndex) {
+                            <tr>
+                                <td>
+                                    <a href="@controllers.routes.ConfigsView.edit(config.getIdConfig())">
+                                        @Html(config.getConfigKey())
+                                    </a>
+                                </td>
+                                <td>@Html(config.getValue())</td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
