--- a/AGataDoDia/Pimp/pimp/app/views/posts/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/posts/edit.scala.html
@@ -56,8 +56,8 @@
                 </div>
             </div>
         } else {
-            @inputText(field("width"), '_label -> Messages("post.media.width.final"), '_help -> Messages("post.media.file.final"), '_error -> postViewForm.globalError, 'class -> "form-control")
-            @inputText(field("height"), '_label -> Messages("post.media.height.final"), '_help -> Messages("post.media.file.final"), '_error -> postViewForm.globalError, 'class -> "form-control")
+            @inputText(field("width"), '_label -> Messages("post.media.width"), '_help -> Messages("post.media.width.final"), '_error -> postViewForm.globalError, 'class -> "form-control")
+            @inputText(field("height"), '_label -> Messages("post.media.height"), '_help -> Messages("post.media.height.final"), '_error -> postViewForm.globalError, 'class -> "form-control")
             @inputText(field("md5"), '_label -> Messages("post.media.md5.final"), '_help -> Messages("post.media.md5.final"), '_error -> postViewForm.globalError, 'class -> "form-control")
             @input(field("link"), '_label -> Messages("post.media.file.final")) { (id, name, value, _) =>
                 <input type="text" name="@name" value="@value" class="form-control">
