PIMP: modulo de administración de usuarios

--- a/AGataDoDia/Pimp/pimp/app/views/instances/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/instances/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: com.avaje.ebean.Page[models.basic.Language], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
+@(currentPage: com.avaje.ebean.Page[models.basic.Instance], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
 
 @****************************************
 * Helper generating navigation links    *
@@ -22,7 +22,7 @@
     }
 
     // Generate the link
-    controllers.routes.LanguagesView.list(newPage, sortBy, order, currentFilter)
+    controllers.routes.InstancesView.list(newPage, sortBy, order, currentFilter)
 
 }
 
@@ -37,12 +37,12 @@
 
 @title = {}
 
-@main(title = Messages("languages.list.head"), nav = "") {
+@main(title = Messages("instances.list.head"), nav = "") {
     <div class="bs-docs-section">
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 id="homeTitle">@Messages("languages.list.title", currentPage.getTotalRowCount)</h1>
+                <h1 id="homeTitle">@Messages("instances.list.title", currentPage.getTotalRowCount)</h1>
             </div>
         </div>
 
@@ -62,15 +62,15 @@
 
                 @if(!sortView) {
                     <div class="col-lg-6">
-                        <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("languages.list.filter.name")>
+                        <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("instances.list.filter.name")>
                     </div>
                     <div class="col-lg-6">
-                        <input type="submit" id="searchsubmit" value=@Messages("post.list.filter.name") class="btn btn-info">
+                        <input type="submit" id="searchsubmit" value=@Messages("instances.list.filter.name") class="btn btn-info">
                     </div>
                 }
 
                 @if(sortView) {
-                    <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/languages/sort/" >@Messages("generic.list.apply")</a>
+                    <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/instances/sort/" >@Messages("generic.list.apply")</a>
                 }
 
             </form>
@@ -87,11 +87,12 @@
                 <div class="col-lg-12">
                     <div class="bs-component">
                         <div class="list-group">
-                            @for((language, index) <-  currentPage.getList().zipWithIndex) {
+                            @for((instance, index) <-  currentPage.getList().zipWithIndex) {
                             <div class="list-group-item">
-                                <a href="@controllers.routes.LanguagesView.edit(language.getIdLanguage())">
+                                <a href="@controllers.routes.InstancesView.edit(instance.getIdInstance())">
                                     <div class="row-content">
-                                        <h4 class="list-group-item-heading">@Html(""+language.getIdLanguage()) - @Html(language.getName())</h4>
+                                        <h4 class="list-group-item-heading">@Html(""+instance.getIdInstance()) - @Html(instance.getName())</h4>
+                                        <p class="list-group-item-text">@Html(instance.getIp())</p>
                                     </div>
                                 </a>
                             </div>
@@ -143,7 +144,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <a href="@controllers.routes.LanguagesView.blank" class="btn btn-primary">@Messages("languages.list.new")</a>
+                <a href="@controllers.routes.InstancesView.blank" class="btn btn-primary">@Messages("instances.list.new")</a>
             </div>
         </div>
 
