--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -243,53 +243,41 @@
                                 <li class="dropdown">
                                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.women")<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.women")</li>
                                         <li><a href="@controllers.routes.WomenView.list()">@Messages("main.list")</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">@Messages("main.operations")</li>
                                         <li><a href="@controllers.routes.WomenView.blank">@Messages("main.create")</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.posts")<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@controllers.routes.PostsView.list()">@Messages("main.list")</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">@Messages("main.operations")</li>
-                                        <li><a href="@controllers.routes.PostsView.blank">@Messages("main.create")</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.languages")<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">@Messages("main.operations")</li>
-                                        <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.countries")<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">@Messages("main.operations")</li>
-                                        <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.categories")<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.categories")</li>
                                         <li><a href="@controllers.routes.CategoriesView.list()">@Messages("main.list")</a></li>
-                                        <li class="divider"></li>
-                                        <li class="dropdown-header">@Messages("main.operations")</li>
                                         <li><a href="@controllers.routes.CategoriesView.blank">@Messages("main.create")</a></li>
                                     </ul>
                                 </li>
 
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.content")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.posts")</li>
+                                        <li><a href="@controllers.routes.PostsView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.PostsView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.resolutions")</li>
+                                        <li><a href="@controllers.routes.ResolutionsView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.ResolutionsView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.featured")</li>
+                                        <li><a href="@controllers.routes.FeaturedView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.FeaturedView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
+
+                                <li class="dropdown">
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.basic")<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="dropdown-header">@Messages("main.languages")</li>
+                                        <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.countries")</li>
+                                        <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
+                                    </ul>
+                                </li>
 
                             }{<p/>}
                         </ul>
