AGATADODIA: actualizaciones y mejoras en el render de los elementos y llamadas al scroll infinito

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
@@ -220,21 +220,16 @@ row:not(input):not(textarea) {
 		display:none;
 	}
 	
+	img.img-rounded {
+		background-image: url('../img/ajax-loader.gif');
+    	background-repeat: no-repeat;		
+		background-attachment: fixed;
+    	background-position: center;
+	}
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	.label.label-default {
+		font-size:0.8em; 
+		margin-right:2px;	
+	}
 	
 	
