AGATADODIA: se cambio la pantalla inicial un poco para que reciba solo una imagen (hay que ajustar el diseño), se mejoro la interaccion de algunas pantallas

--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
@@ -54,7 +54,7 @@
     <feature name="SplashScreen">
         <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
     </feature>
-    <feature name="LaunchMyApp">
-        <param name="android-package" value="nl.xservices.plugins.LaunchMyApp" />
+    <feature name="StatusBar">
+        <param name="android-package" onload="true" value="org.apache.cordova.statusbar.StatusBar" />
     </feature>
 </widget>
