--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/ios/www/css/default.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/ios/www/css/default.css
@@ -7,10 +7,8 @@ row:not(input):not(textarea) {
 	* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 	html { -ms-touch-action: none; font-family: Helvetica; }
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; }
-	
-	#wrapper-bootstrap,
-	#wrapper,
-	#wrapper2 {	
+
+	#wrapper {	
 		position: absolute;
 		z-index: 1;
 		top: 50px; 
@@ -20,21 +18,19 @@ row:not(input):not(textarea) {
 		background: #ffffff;
 	}
 
-	body.content-posts #wrapper {
+	body.content-posts #wrapper { 
 		top: 100px; 
 	}
-	
-	
-	
-	
-	#wrapper-bootstrap {
+
+	body.content-init #wrapper , 
+	body.content-terms #wrapper {
 		background: #000000;
 		color:#ffffff;
-		bottom: 20px; 
-	}	
+		top: 0;
+		bottom: 0;
+	}
 
-	#wrapper .container .row i , 
-	#wrapper2 .container .row i {
+	#wrapper .container .row i {
 		font-size: 2em;
 	}
 
@@ -74,17 +70,6 @@ row:not(input):not(textarea) {
 		padding: 0 !important; 
 		margin: 0 !important; 
 	}
-	
-	
-	body #wrapper2,
-	body #wrapper2 .scroller,
-	body #wrapper2 .scroller .container,    			
-	body #wrapper2 .scroller .container .row,
-	body #wrapper2 .scroller .container .row div { 
-		padding: 0 !important; 
-		margin: 0 !important; 
-	}
-
 
 	img {
 		border-radius : 0 !important;	
@@ -122,9 +107,8 @@ row:not(input):not(textarea) {
 	}
 
 
-	body.content-signin main .container .row #wrapper1 .scroller .container figure,
-	body #wrapper .scroller .container figure,
-	body #wrapper2 .scroller .container figure {
+	body.content-init main .container .row #wrapper1 .scroller .container figure,
+	body #wrapper .scroller .container figure {
 		position:relative;  
 		width: 100%; 
 		height: auto; 
@@ -132,8 +116,7 @@ row:not(input):not(textarea) {
 		bottom: 0;
 	}
 	
-	body #wrapper .scroller .container figure img,
-	body #wrapper2 .scroller .container figure img {
+	body #wrapper .scroller .container figure img {
 		width: 100%;  
 		height: auto;
 		min-height: 200px;
@@ -145,8 +128,7 @@ row:not(input):not(textarea) {
 		min-height: 200px;	
 	} 
 		
-	body #wrapper .scroller .container figure figcaption,
-	body #wrapper2 .scroller .container figure figcaption, .caption {
+	body #wrapper .scroller .container figure figcaption, .caption {
 		margin-top: 0px !important;	
 		width:100%;
 		height: auto;
@@ -155,8 +137,8 @@ row:not(input):not(textarea) {
 	    color: #000000;   	
 	}
 
-	body.content-signup main .container,
-	body.content-signin main .container  {		
+	
+	body.content-init main .container  {		
 		width:100%;
 		height: auto;		
 	   	margin-top: 0px;
@@ -207,32 +189,20 @@ row:not(input):not(textarea) {
 	}
 
 
-	body #wrapper2 .icon-material-favorite,
-	body #wrapper2 .icon-material-share-alt {
-		text-shadow: 0 1px 2px rgba(0,0,0,.6);
-		color:#FFFFFF;
-	}
-
-	body #wrapper2 .icon-material-favorite.on {
-		color:#FF0000;
-	}
-	
-	
 	body.content-init header,
-	body.content-signin header {
+	body.content-terms header {
 		display: none;
 		height: 0;
 		line-height: 0;	
 	}
 	
-	body.content-init header .container,
-	body.content-signin header .container {
-				height: 0;
+	body.content-init header .container {
+		height: 0;
 		line-height: 0;	
 	}
 	
-	body.content-signin header .container i.icon-menu,
 	body.content-signup header .container i.icon-menu,
+	body.content-terms header .container i.icon-menu,
 	body.content-init header .container i.icon-menu {
 		display:none;
 	}
