--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -18,7 +18,7 @@ row:not(input):not(textarea) {
 
 	#wrapper2 {
 		position: absolute;
-		z-index: 2;
+		z-index: 3;
 		top: 0; 
 		bottom: 0; 
 		left: 0;  
@@ -74,11 +74,11 @@ row:not(input):not(textarea) {
 	.hidden { display: none; }
 					
 
-	body #wrapper,
-	body #wrapper .scroller,
-	body #wrapper .scroller .container,    			
-	body #wrapper .scroller .container .row,
-	body #wrapper .scroller .container .row div { 
+	#wrapper,
+	#wrapper .scroller,
+	#wrapper .scroller .container,    			
+	#wrapper .scroller .container .row,
+	#wrapper .scroller .container .row div { 
 		padding: 0 !important; 
 		margin: 0 !important; 
 	}
@@ -88,12 +88,39 @@ row:not(input):not(textarea) {
 	}
 
 	
-	body.content-news #wrapper .scroller .container .row  {padding: 0 20px !important;}
-	body.content-news #wrapper .scroller .container .row .news {border-bottom: solid 1pt #2B2B2B !important;}
-	body.content-news #wrapper .scroller .container .row .news:last-child {border: 0 !important;}
-	body.content-news #wrapper .scroller .container .row .news .title {color:#00102B;}
-	body.content-news #wrapper .scroller .container .row .news .moment {color:#3B9444;}
 	
+	
+	.content-news #wrapper .scroller .container .row  {padding: 0 20px !important;}
+	.content-news #wrapper .scroller .container .row .news {
+		padding-top: 10px !important;
+		padding-bottom: 10px !important;
+		border-bottom: solid 1pt #2B2B2B !important;		
+	}
+	
+	.content-news #wrapper .scroller .container .row .news:last-child {border: 0 !important;}
+	
+	.content-news #wrapper .scroller .container .row .news .title {color:#00102B;}
+	.content-news #wrapper .scroller .container .row .news .moment {color:#3B9444;}
+	
+
+	.content-news #wrapper2 .scroller .container .row .news:last-child {border: 0 !important;}
+	.content-news #wrapper2 .scroller .container .row .news .title {color:#00102B;}
+	
+	.content-news #wrapper2 .scroller .container .row .news .moment {
+		color:#3B9444;
+		padding-bottom:10px !important;
+	}
+	
+	.content-news #wrapper2 .scroller .container .row .news .summary {
+		padding-top:20px !important;
+		padding-bottom:20px !important;
+		border-top: solid 1pt #2B2B2B !important;
+		border-bottom: solid 1pt #2B2B2B !important;
+	}
+	
+	.content-news #wrapper2 .scroller .container .row .news .body {	
+		padding-top:10px !important;
+	}
 	
 	
 	
