--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -7,6 +7,13 @@ row:not(input):not(textarea) {
 	html { -ms-touch-action: none; font-family: Helvetica; }
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; }
 
+	a { color: #FFFFFF !important; text-decoration: none  !important; }
+	a:link {color: #FFFFFF !important; text-decoration: none  !important; }
+	a:visited {color: #FFFFFF !important; text-decoration: none  !important; }
+	a:hover {color: #FFFFFF !important; text-decoration: none  !important; }
+	a:active { color: #FFFFFF !important; text-decoration: none  !important; }
+
+
 	#wrapper {	
 		position: absolute;
 		z-index: 1;
@@ -122,11 +129,10 @@ row:not(input):not(textarea) {
 		padding-top:10px !important;
 	}
 	
-	
-	
-	
-	
-	
+
+	.option.active {
+		background-color:#263776;
+	}
 	
 	
 	
