--- a/FutbolBrasil/app/platforms/android/res/xml/config.xml
+++ b/FutbolBrasil/app/platforms/android/res/xml/config.xml
@@ -17,4 +17,7 @@
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
     </feature>
+    <feature name="SocialSharing">
+        <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
+    </feature>
 </widget>
