--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
@@ -64,4 +64,7 @@
         <param name="android-package" value="org.apache.cordova.file.FileUtils" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="SharedConfigurations">
+        <param name="android-package" value="com.hecticus.cordova.plugins.sharedconfigurations.SharedConfigurations" />
+    </feature>
 </widget>
