FUTBOBRASIL: FASE 1 DE DE RENDER DE TABLA DE POSCIONES

--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -118,7 +118,11 @@ row:not(input):not(textarea) {
 	}
 	
 	
-	body.content-news #wrapper .scroller .container .row  {padding: 0 20px !important;}
+	body.content-news #wrapper .scroller .container .row ,
+	body.content-standings #wrapper .scroller .container .row 
+	{padding: 0 20px !important;}
+	
+	
 	body.content-news #wrapper .scroller .container .row .news {
 		padding-top: 10px !important;
 		padding-bottom: 10px !important;
@@ -138,17 +142,17 @@ row:not(input):not(textarea) {
 		color:#3B9444;		
 	}
 	
-	/*body.content-news #wrapper2 .scroller .container .row .news .summary {
-		padding-top:20px !important;
-		padding-bottom:20px !important;
-		border-top: solid 1pt #2B2B2B !important;
-		border-bottom: solid 1pt #2B2B2B !important;
-	}*/
-	
 	body.content-news #wrapper2 .scroller .container .row .news .body {	
 		margin-top:20px !important;
 		padding-top:20px !important;
 		border-top: solid 1pt #2B2B2B !important;
 	}
 	
+	body.content-standings .standings h4 {
+		text-transform:uppercase;
+		display:none;
+	}
 	
+	body.content-standings .standings h4.active {
+		display:block;
+	}
