--- a/AGataDoDia/AGataDoDia/AGataDoDia/www/css/default.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/www/css/default.css
@@ -159,25 +159,7 @@ row:not(input):not(textarea) {
 		color:#000000  !important;
 	}
 	
-	.carousel-control {
-		z-index: 2 !important;
-		height: 0 !important;
-		top:50% !important;
-	}
-
-	.carousel-control.left,
-	.carousel-control.right {
-		background-image: none !important;
-		opacity: 1 !important;
-	}
 	
-	span.glyphicon.glyphicon-chevron-left, 
-	span.glyphicon.glyphicon-chevron-right {
-		font-size:1.6em !important;		
-		top: 0 !important;
-	}
-	
-
 	body.content-posts .icon-material-favorite,
 	body.content-posts .icon-material-share-alt {
 		text-shadow: 0 1px 2px rgba(0,0,0,.6);
@@ -188,23 +170,11 @@ row:not(input):not(textarea) {
 		color:#FF0000;
 	}
 
-
-	body.content-init header,
-	body.content-terms header {
+	body.not-header header,
+	body.not-header header .container {
 		display: none;
 		height: 0;
 		line-height: 0;	
-	}
-	
-	body.content-init header .container {
-		height: 0;
-		line-height: 0;	
-	}
-	
-	body.content-signup header .container i.icon-menu,
-	body.content-terms header .container i.icon-menu,
-	body.content-init header .container i.icon-menu {
-		display:none;
 	}
 	
 	img.img-rounded {
@@ -213,12 +183,25 @@ row:not(input):not(textarea) {
 		background-image: url('../img/ajax-loader.gif');
     	background-repeat: no-repeat;		
 		background-attachment: fixed;
-    	background-position: center;
+    	background-position: center;    		
 	}
 	
 	.label.label-default {
 		font-size:0.8em; 
 		margin-right:2px;	
+	}
+	
+	
+	#alert {
+		background-color: #9e9e9e !important; 
+		width:90%;  
+		position:absolute;
+		bottom: 25%; 
+		z-index: 5;  
+		left:0; 
+		right:0; 
+		margin-left:auto; 
+		margin-right:auto; 		
 	}
 	
 	
