TVNADMIN: Se agrega en los formularios de creación y edición de categorías el campo status y se actualiza rutas de archivo .gitignore

--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/form.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/form.scala.html
@@ -34,6 +34,16 @@
                 '_help -> "Requerido."
             )
             
+             @select(
+                categoryForm("status"), 
+                options("0"-> "No", "1"-> "Si"),
+                '_default -> "--- Seleccione ---",
+                '_label -> "Estatus",
+                '_error -> categoryForm("status").error.map(_.withMessage("Selecciona una opción")),
+                '_help -> "Requerido."
+            )
+            
+            
         </fieldset>
 
         <div class="actions">
