--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/edit.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/edit.scala.html
@@ -26,6 +26,17 @@
 				'_help -> "Requerido."
             )
 
+			@select(
+                categoryForm("status"), 
+                options("0"-> "No", "1"-> "Si"),
+                '_default -> "--- Seleccione ---",
+                '_label -> "Estatus",
+                '_error -> categoryForm("status").error.map(_.withMessage("Selecciona una opción")),
+                'showConstraints -> true,
+                '_help -> "Requerido."
+            )
+            
+
         </fieldset>
         
         <div class="actions">
