--- a/AGataDoDia/Pimp/pimp/app/views/posts/form.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/posts/form.scala.html
@@ -100,7 +100,13 @@
                 'class -> "form-control"
             )
 
-
+            @select(
+                postViewForm("gender.idGender"),
+                models.clients.Gender.toSeq,
+                '_label -> Messages("post.gender"),
+                '_error -> postViewForm.globalError,
+                'class -> "form-control"
+            )
 
             <div class="row">
                 <div class="col-lg-12">
