--- a/AGataDoDia/Pimp/pimp/app/views/posts/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/posts/list.scala.html
@@ -101,7 +101,7 @@
                                     }
 
                                     <div class="row-content">
-                                        <h4 class="list-group-item-heading">@Html(""+post.getIdPost()) - @Html(post.getWoman().getName()) <span class="badge">@post.getMedia().size</span></h4>
+                                        <h4 class="list-group-item-heading">@Html(""+post.getIdPost()) - @Html(post.getTheme().getName()) <span class="badge">@post.getMedia().size</span></h4>
                                         <p class="list-group-item-text">@Html(post.getDateFormatted())</p>
                                     </div>
                                 </a>
