--- a/AGataDoDia/Pimp/pimp/app/views/categories/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/categories/edit.scala.html
@@ -1,4 +1,4 @@
-@(id: Integer, categoryViewForm: Form[models.content.women.Category])
+@(id: Integer, categoryViewForm: Form[models.content.themes.Category])
 
 @import helper._
 @import helper.twitterBootstrap._
