--- a/AGataDoDia/Pimp/pimp/app/views/categories/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/categories/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: com.avaje.ebean.Page[models.content.women.Category], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
+@(currentPage: com.avaje.ebean.Page[models.content.themes.Category], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
 
 @****************************************
 * Helper generating navigation links    *
