--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -241,11 +241,11 @@
                                     }
                                 }
                                 <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.women")<b class="caret"></b></a>
+                                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.themes")<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li class="dropdown-header">@Messages("main.women")</li>
-                                        <li><a href="@controllers.routes.WomenView.list()">@Messages("main.list")</a></li>
-                                        <li><a href="@controllers.routes.WomenView.blank">@Messages("main.create")</a></li>
+                                        <li class="dropdown-header">@Messages("main.themes")</li>
+                                        <li><a href="@controllers.routes.ThemesView.list()">@Messages("main.list")</a></li>
+                                        <li><a href="@controllers.routes.ThemesView.blank">@Messages("main.create")</a></li>
                                         <li class="dropdown-header">@Messages("main.categories")</li>
                                         <li><a href="@controllers.routes.CategoriesView.list()">@Messages("main.list")</a></li>
                                         <li><a href="@controllers.routes.CategoriesView.blank">@Messages("main.create")</a></li>
