--- a/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
@@ -1,4 +1,4 @@
-@(post: models.content.posts.Post, women: List[models.content.women.Woman], postForm: Form[models.content.posts.Post])
+@(post: models.content.posts.Post, themes: List[models.content.themes.Theme], postForm: Form[models.content.posts.Post])
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -91,8 +91,8 @@
 
 
 
-        @if(post.getWoman() != null){
-	        <h1>@Html(""+post.getIdPost()) - @Html(post.getWoman().getName())</h1>
+        @if(post.getTheme() != null){
+	        <h1>@Html(""+post.getIdPost()) - @Html(post.getTheme().getName())</h1>
         }else{
             <h1>New Post</h1>
         }
@@ -154,7 +154,7 @@
             <div class="col-lg-12">
                 @select(
                     postForm("socialNetwork"),
-                    options = options(models.content.women.SocialNetwork.options),
+                    options = options(models.content.themes.SocialNetwork.options),
                     '_label -> "Social Network",
                     'class -> "form-control"
                 )
@@ -170,7 +170,7 @@
             <div class="col-lg-12">
                 @select(
                     postForm("woman"),
-                    options = options(models.content.women.Woman.options),
+                    options = options(models.content.themes.Theme.options),
                     'class -> "form-control"
                 )
             </div>
