--- a/AGataDoDia/Pimp/pimp/app/views/themes/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/themes/edit.scala.html
@@ -1,4 +1,4 @@
-@(womenViewForm: Form[models.content.women.Woman])
+@(id: Integer, themesViewForm: Form[models.content.themes.Theme])
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -7,11 +7,11 @@
 
 @categoryGroup(field: Field, className: String = "category") = {
     <div class="twipsies well @className">
-        <a class="removeCategory btn btn-primary danger pull-right">@Messages("women.category.remove")</a>
+        <a class="removeCategory btn btn-primary danger pull-right">@Messages("themes.category.remove")</a>
         @select(
-            field("category"),
-            models.content.women.Category.toSeq,
-            '_label -> Messages("women.category"),
+            field("category.idCategory"),
+            models.content.themes.Category.toSeq,
+            '_label -> Messages("themes.category"),
             'class -> "form-control"
         )
     </div>
@@ -19,119 +19,122 @@
 
 @socialNetworkGroup(field: Field, className: String = "socialNetwork") = {
     <div class="twipsies well @className">
-        <a class="removeSocialNetwork btn btn-primary danger pull-right">@Messages("women.socialnetwork.remove")</a>
+        <a class="removeSocialNetwork btn btn-primary danger pull-right">@Messages("themes.socialnetwork.remove")</a>
         @select(
             field("socialNetwork"),
-            models.content.women.SocialNetwork.toSeq,
-            '_label -> Messages("women.socialnetwork"),
+            models.content.themes.SocialNetwork.toSeq,
+            '_label -> Messages("themes.socialnetwork"),
             'class -> "form-control"
         )
-        @input(field("link"), '_label -> Messages("women.socialnetwork.link")) { (id, name, value, _) =>
+        @input(field("link"), '_label -> Messages("themes.socialnetwork.link")) { (id, name, value, _) =>
             <input type="text" name="@name" value="@value" class="form-control" >
         }
     </div>
 }
 
-@main(title = Messages("women.create"), nav = "create") {
-    
-     @if(flash.containsKey("success")) {
-        <div class="alert-message warning">
-            <strong>@Messages("generic.error.title")</strong> @flash.get("success")
-        </div>
-    }
+@main(title = Messages("themes.edit"), nav = "create") {
 
-    @if(womenViewForm.hasErrors) {
+    @if(themesViewForm.hasErrors) {
         <div class="alert alert-dismissable alert-danger">
             <button type="button" class="close" data-dismiss="alert">×</button>
             <strong>@Messages("generic.error.title")</strong> @Messages("generic.error.content")
-            <p>@womenViewForm.errorsAsJson</p>
+            <p>@themesViewForm.errorsAsJson</p>
         </div>
     }
+    
 
-
-    @helper.form(action = controllers.routes.WomenView.submit, 'enctype -> "multipart/form-data", 'id -> "form") {
+     @helper.form(controllers.routes.ThemesView.update(id), 'enctype -> "multipart/form-data", 'id -> "form") {
         
         <fieldset>
-            <legend>@Messages("women.info")</legend>
-
-            @inputText(womenViewForm("name"),
-            '_label -> Messages("women.name"),
-            '_help -> Messages("women.name.help"),
-            'class -> "form-control",
-            '_error -> womenViewForm.globalError)
+        	<legend>@Messages("themes.info")</legend>
+        	
+        	@inputText(themesViewForm("name"),
+                '_label -> Messages("themes.name"),
+                '_help -> Messages("themes.name.help"),
+                'class -> "form-control",
+                '_error -> themesViewForm.globalError)
 
 
 
             <div class="form-group">
-                <label for="inputFile" class="col-lg-2 control-label">@Messages("women.image")</label>
-                <div class="col-lg-10">
-                    @input(womenViewForm("defaultPhoto"), '_label -> Messages("women.image.file")) { (id, name, value, _) =>
+                <div class="col-lg-4">
+                    <label for="inputFile" class="col-lg-2 control-label">@Messages("themes.image")</label>
+                    <div class="col-lg-12">
+                        <img class="img-rounded" src=@themesViewForm("defaultPhoto").value alt="icon" style="width: 100px; height: 100px;" >
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    @input(themesViewForm("defaultPhoto"), '_label -> Messages("themes.image.file")) { (id, name, value, _) =>
                         <input type="text" name="@name" value="@value" readonly="" class="form-control floating-label" placeholder="Browse...">
                         <input type="file" name="@name" value="@value" id="inputFile" multiple="">
+
                     }
                 </div>
             </div>
 
-
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>@Messages("women.category.plural")</h2>
+                    <h2>@Messages("themes.category.plural")</h2>
                 </div>
             </div>
             <div id="categories">
 
-                @repeat(womenViewForm("categories")) { category =>
+                @repeat(themesViewForm("categories")) { category =>
 
-                    @categoryGroup(category)
+                @categoryGroup(category)
 
                 }
                 @categoryGroup(
-                    womenViewForm("categories[x]"),
+                    themesViewForm("categories[x]"),
                     className = "category_template"
                 )
 
                 <div class="manage">
-                    <a class="addCategory btn btn-primary success">@Messages("women.category.add")</a>
+                    <a class="addCategory btn btn-primary success">@Messages("themes.category.add")</a>
                 </div>
 
             </div>
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>@Messages("women.socialnetwork.plural")</h2>
+                    <h2>@Messages("themes.socialnetwork.plural")</h2>
                 </div>
             </div>
             <div id="socialNetworks">
 
-                @repeat(womenViewForm("socialNetworks")) { socialNetwork =>
+                @repeat(themesViewForm("socialNetworks")) { socialNetwork =>
 
                     @socialNetworkGroup(socialNetwork)
 
                 }
                 @socialNetworkGroup(
-                    womenViewForm("socialNetworks[x]"),
+                    themesViewForm("socialNetworks[x]"),
                     className = "socialNetworks_template"
                 )
 
                 <div class="manage">
-                    <a class="addSocialNetworks btn btn-primary success">@Messages("women.socialnetwork.add")</a>
+                    <a class="addSocialNetworks btn btn-primary success">@Messages("themes.socialnetwork.add")</a>
                 </div>
 
             </div>
-            
+
         </fieldset>
 
-        <div class="actions">
-            <input type="submit" class="btn btn-success" value=@Messages("post.submit.create")>
-            <a href="@controllers.routes.WomenView.list()" class="btn btn-primary">@Messages("generic.cancel")</a>
+        <div class="actions">        	        	 
+            <input type="submit" value=@Messages("themes.submit.update") class="btn btn-success">
+            <a href="@controllers.routes.ThemesView.list()" class="btn btn-primary">@Messages("generic.cancel")</a>
         </div>
-        
+            
+    }
+    
+    @form(controllers.routes.ThemesView.delete(id), 'class -> "topRight") {
+		<input type="submit" value=@Messages("themes.submit.delete") class="btn btn-danger">
+		
     }
 
     <script type="text/javascript" charset="utf-8">
 
         $(document).on('click','.removeCategory', function(e) {
-            console.log("ESTO NO LO VEO")
             $(this).parents('.category').remove()
             renumberCategories()
         })
@@ -149,15 +152,6 @@
                     $(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
 
                 })
-                /*$('label', this).each(function() {
-                    console.log("PASO1 "+$(this).attr('for'));
-                    $(this).attr('for', $(this).attr('for').replace(/categories\_x/g, 'categories_' + i))
-                })
-
-                $('div', this).each(function() {
-                    console.log("PASO2 "+$(this).attr('id'));
-                    //$(this).attr('id', $(this).attr('id').replace(/categories\_x/g, 'categories_' + i))
-                })*/
             })
         }
 
@@ -193,5 +187,5 @@
         }
 
     </script>
- 
+       
 }
