--- a/AGataDoDia/Pimp/pimp/app/views/themes/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/themes/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: com.avaje.ebean.Page[models.content.women.Woman], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
+@(currentPage: com.avaje.ebean.Page[models.content.themes.Theme], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
 
 @****************************************
 * Helper generating navigation links    *
@@ -22,7 +22,7 @@
     }
     
     // Generate the link
-    controllers.routes.WomenView.list(newPage, sortBy, order, currentFilter)
+    controllers.routes.ThemesView.list(newPage, sortBy, order, currentFilter)
     
 }
 
@@ -37,12 +37,12 @@
 
 @title = {}
 
-@main(title = Messages("women.list.head"), nav = "") {
+@main(title = Messages("themes.list.head"), nav = "") {
     <div class="bs-docs-section">
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 id="homeTitle">@Messages("women.list.title", currentPage.getTotalRowCount)</h1>
+                <h1 id="homeTitle">@Messages("themes.list.title", currentPage.getTotalRowCount)</h1>
             </div>
         </div>
 
@@ -62,16 +62,16 @@
 
                 @if(!sortView) {
                     <div class="col-lg-6">
-                        <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("women.list.filter.name")>
+                        <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("themes.list.filter.name")>
                     </div>
                     <div class="col-lg-6">
-                        <input type="submit" id="searchsubmit" value=@Messages("women.list.filter.name") class="btn btn-info">
+                        <input type="submit" id="searchsubmit" value=@Messages("themes.list.filter.name") class="btn btn-info">
                     </div>
 
                 }
 
                 @if(sortView) {
-                    <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/women/sort/" >@Messages("generic.list.apply")</a>
+                    <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/themes/sort/" >@Messages("generic.list.apply")</a>
                 }
 
             </form>
@@ -88,12 +88,12 @@
                 <div class="col-lg-12">
                     <div class="bs-component">
                         <div class="list-group">
-                            @for((women, index) <-  currentPage.getList().zipWithIndex) {
+                            @for((theme, index) <-  currentPage.getList().zipWithIndex) {
                             <div class="list-group-item">
-                                <a href="@controllers.routes.WomenView.edit(women.getIdWoman())">
-                                    @if(women.getDefaultPhoto() != null && women.getDefaultPhoto() != "") {
+                                <a href="@controllers.routes.ThemesView.edit(theme.getIdTheme())">
+                                    @if(theme.getDefaultPhoto() != null && theme.getDefaultPhoto() != "") {
                                         <div class="row-picture">
-                                            <img class="circle" src="@women.getDefaultPhoto()" alt="icon">
+                                            <img class="circle" src="@theme.getDefaultPhoto()" alt="icon">
                                         </div>
                                     } else {
                                         <div class="row-action-primary">
@@ -102,7 +102,7 @@
                                     }
 
                                     <div class="row-content">
-                                        <h4 class="list-group-item-heading">@Html(""+women.getIdWoman()) - @Html(women.getName()) </h4>
+                                        <h4 class="list-group-item-heading">@Html(""+theme.getIdTheme()) - @Html(theme.getName()) </h4>
                                     </div>
                                     <!-- Categorias de la chica -->
 
@@ -156,7 +156,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <a href="@controllers.routes.WomenView.blank" class="btn btn-primary">@Messages("women.list.new")</a>
+                <a href="@controllers.routes.ThemesView.blank" class="btn btn-primary">@Messages("themes.list.new")</a>
             </div>
         </div>
 
